@@ -1,0 +1,44 @@
+TARGET := EccEdc_linux.out
+INCFLAGS := -I. -I_external -I_linux
+CFLAGS := -include _linux/defineForLinux.h
+CXXFLAGS := $(CFLAGS) -std=c++11
+
+ifneq ($(SANITIZER),)
+   CFLAGS   := -fsanitize=$(SANITIZER) $(CFLAGS)
+   CXXFLAGS := -fsanitize=$(SANITIZER) $(CXXFLAGS)
+   LDFLAGS  := -fsanitize=$(SANITIZER) $(LDFLAGS)
+endif
+
+ifeq ($(DEBUG), 1)
+	CFLAGS += -O0 -g
+	CXXFLAGS += -O0 -g
+else
+	CFLAGS += -O2 -Wall -Wextra -Wno-unknown-pragmas
+	CXXFLAGS += -O2 -Wall -Wextra -Wno-unknown-pragmas
+endif
+
+SOURCES_CXX := \
+  EccEdc.o \
+  _external/ecm.o \
+  _linux/defineForLinux.o
+
+OBJECTS := $(SOURCES_C:.c=.o) $(SOURCES_CXX:.cpp=.o)
+
+all: $(TARGET)
+$(TARGET): $(OBJECTS)
+	$(CXX) -o $@ $(OBJECTS) $(LDFLAGS) $(LIBS)
+
+%.o: %.c
+	$(CC) -c -o $@ $< $(CFLAGS) $(INCFLAGS)
+
+%.o: %.cpp
+	$(CXX) -c -o $@ $< $(CXXFLAGS) $(INCFLAGS)
+
+clean-objs:
+	rm -f $(OBJECTS)
+
+clean:
+	rm -f $(OBJECTS)
+	rm -f $(TARGET)
+
+.PHONY: clean clean-objs
